# OpsPilot-AI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pr-branch-policy.yml
app/: config.py  dependencies.py  exceptions.py  logging_config.py  main.py
app/api/routes/: health.py
app/schemas/: health.py
docs/: architecture.md  cloud-architecture.md  cost-aware-deployment.md  data-privacy.md  development-workflow.md  product-definition.md
infra/docker/: Dockerfile.api
tests/api/: test_health_routes.py
tests/unit/: test_settings.py  test_tooling_smoke.py
