[project]
name = "opspilot-ai"
version = "0.1.0"
description = "Production-grade AI backend platform for internal operations, RAG, workflow automation, LLMOps, and cloud deployment."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "structlog>=26.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
exclude = ["\\.venv/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
markers = [
    "unit: isolated unit tests",
    "api: API contract and endpoint tests",
    "integration: tests requiring infrastructure or external adapters",
    "security: security and privacy regression tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    ".venv/*",
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
